04-04-2005 Qball <Qball@qballcow.nl>
	* src/playlist3.c:	If playlist get changed update total time.
	* src/playlist3.c:	You can now get id3 info of selected song in
	playlist search.
	* src/playlist3.c:	Right mouse menu playlist search
	* src/main.c:		Error disables autoconnect. (bug 0422)
	* src/main.c:		Changed stock icons for
	play/pause/stop/prev/next to gtk+-2.6 names. so they should be
	skinned. (bug 0423)
	* src/player.c:		changed stock to new name.
	* src/tray-icon.c:	changed stock to new name.

30-04-2005 Qball <Qball@qballcow.nl>
	* src/libmpd.[c|h]:	Support for stats. (total
	songs,artists,albums,uptime,playtime)
	* glade/gmpc.glade:	Added server stats
	* glade/id3_info.c:	Length shows elapsed time when showing playing
	song.
	* glade/gmpc.glade:	in the id3_window_info changed all entries to
	labels and added severall options.
	* src/id3_info.c:	Added support for genre, composer,path and
	bitrate (live updating)
	* src/strfsong.c:	Added support for genre and composer.
	* src/strfsong.c:	f.e. if no title %title% is never shown.
	* src/libmpdclient.c|h:	Added support for composer and genre.
	* src/libmpd.c:		Added mpd_ob_status_get_bitrate


29-04-2005 Qball <Qball@qballcow.nl>
	* glade/gmpc.glade:	Markup editor window now uses gmpc icon
27-04-2005 Qball <Qball@qballcow.nl>
	* doc/future.txt:	added
	* doc/0.12.txt:		added
	* doc/markup.txt:	added
	* doc/keybindings.txt:	Document with some keybinding listed.
	* src/libmpdclient.[c|h]:	Updated to svn version.

26-04-2005 Qball <Qball@qballcow.nl>
	* po/ru.po:		Added russian translation. thanks to SK
	
25-04-2005 Qball <Qball@QballCow.nl>
	* src/libmpd.[c|h]:	Included Copyright notice in file
	* src/player.c:		Keybinding for playlist search (j)
	* src/player.c:		Keybinding for song information (i)
	* src/playlist.c:	Using gtk_window_present again, maybe solving
	thoru's focus problem.
	* playlist:		Added alt-s focus for search entry box.
	* src/playlist3.c:	Fixed keybinding when non-tree selected. (a